--- a/Templates/Blank TBL grid.wikitext
+++ b/Templates/Blank TBL grid.wikitext
@@ -10,290 +10,290 @@ The space (<code>&nbsp;</code>) character is $00.
 !    !!  _0  !!  _1  !!  _2  !!  _3  !!  _4  !!  _5  !!  _6  !!  _7  !!  _8  !!  _9  !!  _a  !!  _b  !!  _c  !!  _d  !!  _e  !!  _f
 |-
 ! scope="row" |  0_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 00 -->  style="background-color: #eaecf0;"  |
+|  <!-- 01 -->  style="background-color: #eaecf0;"  |
+|  <!-- 02 -->  style="background-color: #eaecf0;"  |
+|  <!-- 03 -->  style="background-color: #eaecf0;"  |
+|  <!-- 04 -->  style="background-color: #eaecf0;"  |
+|  <!-- 05 -->  style="background-color: #eaecf0;"  |
+|  <!-- 06 -->  style="background-color: #eaecf0;"  |
+|  <!-- 07 -->  style="background-color: #eaecf0;"  |
+|  <!-- 08 -->  style="background-color: #eaecf0;"  |
+|  <!-- 09 -->  style="background-color: #eaecf0;"  |
+|  <!-- 0a -->  style="background-color: #eaecf0;"  |
+|  <!-- 0b -->  style="background-color: #eaecf0;"  |
+|  <!-- 0c -->  style="background-color: #eaecf0;"  |
+|  <!-- 0d -->  style="background-color: #eaecf0;"  |
+|  <!-- 0e -->  style="background-color: #eaecf0;"  |
+|  <!-- 0f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  1_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 10 -->  style="background-color: #eaecf0;"  |
+|  <!-- 11 -->  style="background-color: #eaecf0;"  |
+|  <!-- 12 -->  style="background-color: #eaecf0;"  |
+|  <!-- 13 -->  style="background-color: #eaecf0;"  |
+|  <!-- 14 -->  style="background-color: #eaecf0;"  |
+|  <!-- 15 -->  style="background-color: #eaecf0;"  |
+|  <!-- 16 -->  style="background-color: #eaecf0;"  |
+|  <!-- 17 -->  style="background-color: #eaecf0;"  |
+|  <!-- 18 -->  style="background-color: #eaecf0;"  |
+|  <!-- 19 -->  style="background-color: #eaecf0;"  |
+|  <!-- 1a -->  style="background-color: #eaecf0;"  |
+|  <!-- 1b -->  style="background-color: #eaecf0;"  |
+|  <!-- 1c -->  style="background-color: #eaecf0;"  |
+|  <!-- 1d -->  style="background-color: #eaecf0;"  |
+|  <!-- 1e -->  style="background-color: #eaecf0;"  |
+|  <!-- 1f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  2_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 20 -->  style="background-color: #eaecf0;"  |
+|  <!-- 21 -->  style="background-color: #eaecf0;"  |
+|  <!-- 22 -->  style="background-color: #eaecf0;"  |
+|  <!-- 23 -->  style="background-color: #eaecf0;"  |
+|  <!-- 24 -->  style="background-color: #eaecf0;"  |
+|  <!-- 25 -->  style="background-color: #eaecf0;"  |
+|  <!-- 26 -->  style="background-color: #eaecf0;"  |
+|  <!-- 27 -->  style="background-color: #eaecf0;"  |
+|  <!-- 28 -->  style="background-color: #eaecf0;"  |
+|  <!-- 29 -->  style="background-color: #eaecf0;"  |
+|  <!-- 2a -->  style="background-color: #eaecf0;"  |
+|  <!-- 2b -->  style="background-color: #eaecf0;"  |
+|  <!-- 2c -->  style="background-color: #eaecf0;"  |
+|  <!-- 2d -->  style="background-color: #eaecf0;"  |
+|  <!-- 2e -->  style="background-color: #eaecf0;"  |
+|  <!-- 2f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  3_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 30 -->  style="background-color: #eaecf0;"  |
+|  <!-- 31 -->  style="background-color: #eaecf0;"  |
+|  <!-- 32 -->  style="background-color: #eaecf0;"  |
+|  <!-- 33 -->  style="background-color: #eaecf0;"  |
+|  <!-- 34 -->  style="background-color: #eaecf0;"  |
+|  <!-- 35 -->  style="background-color: #eaecf0;"  |
+|  <!-- 36 -->  style="background-color: #eaecf0;"  |
+|  <!-- 37 -->  style="background-color: #eaecf0;"  |
+|  <!-- 38 -->  style="background-color: #eaecf0;"  |
+|  <!-- 39 -->  style="background-color: #eaecf0;"  |
+|  <!-- 3a -->  style="background-color: #eaecf0;"  |
+|  <!-- 3b -->  style="background-color: #eaecf0;"  |
+|  <!-- 3c -->  style="background-color: #eaecf0;"  |
+|  <!-- 3d -->  style="background-color: #eaecf0;"  |
+|  <!-- 3e -->  style="background-color: #eaecf0;"  |
+|  <!-- 3f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  4_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 40 -->  style="background-color: #eaecf0;"  |
+|  <!-- 41 -->  style="background-color: #eaecf0;"  |
+|  <!-- 42 -->  style="background-color: #eaecf0;"  |
+|  <!-- 43 -->  style="background-color: #eaecf0;"  |
+|  <!-- 44 -->  style="background-color: #eaecf0;"  |
+|  <!-- 45 -->  style="background-color: #eaecf0;"  |
+|  <!-- 46 -->  style="background-color: #eaecf0;"  |
+|  <!-- 47 -->  style="background-color: #eaecf0;"  |
+|  <!-- 48 -->  style="background-color: #eaecf0;"  |
+|  <!-- 49 -->  style="background-color: #eaecf0;"  |
+|  <!-- 4a -->  style="background-color: #eaecf0;"  |
+|  <!-- 4b -->  style="background-color: #eaecf0;"  |
+|  <!-- 4c -->  style="background-color: #eaecf0;"  |
+|  <!-- 4d -->  style="background-color: #eaecf0;"  |
+|  <!-- 4e -->  style="background-color: #eaecf0;"  |
+|  <!-- 4f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  5_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 50 -->  style="background-color: #eaecf0;"  |
+|  <!-- 51 -->  style="background-color: #eaecf0;"  |
+|  <!-- 52 -->  style="background-color: #eaecf0;"  |
+|  <!-- 53 -->  style="background-color: #eaecf0;"  |
+|  <!-- 54 -->  style="background-color: #eaecf0;"  |
+|  <!-- 55 -->  style="background-color: #eaecf0;"  |
+|  <!-- 56 -->  style="background-color: #eaecf0;"  |
+|  <!-- 57 -->  style="background-color: #eaecf0;"  |
+|  <!-- 58 -->  style="background-color: #eaecf0;"  |
+|  <!-- 59 -->  style="background-color: #eaecf0;"  |
+|  <!-- 5a -->  style="background-color: #eaecf0;"  |
+|  <!-- 5b -->  style="background-color: #eaecf0;"  |
+|  <!-- 5c -->  style="background-color: #eaecf0;"  |
+|  <!-- 5d -->  style="background-color: #eaecf0;"  |
+|  <!-- 5e -->  style="background-color: #eaecf0;"  |
+|  <!-- 5f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  6_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 60 -->  style="background-color: #eaecf0;"  |
+|  <!-- 61 -->  style="background-color: #eaecf0;"  |
+|  <!-- 62 -->  style="background-color: #eaecf0;"  |
+|  <!-- 63 -->  style="background-color: #eaecf0;"  |
+|  <!-- 64 -->  style="background-color: #eaecf0;"  |
+|  <!-- 65 -->  style="background-color: #eaecf0;"  |
+|  <!-- 66 -->  style="background-color: #eaecf0;"  |
+|  <!-- 67 -->  style="background-color: #eaecf0;"  |
+|  <!-- 68 -->  style="background-color: #eaecf0;"  |
+|  <!-- 69 -->  style="background-color: #eaecf0;"  |
+|  <!-- 6a -->  style="background-color: #eaecf0;"  |
+|  <!-- 6b -->  style="background-color: #eaecf0;"  |
+|  <!-- 6c -->  style="background-color: #eaecf0;"  |
+|  <!-- 6d -->  style="background-color: #eaecf0;"  |
+|  <!-- 6e -->  style="background-color: #eaecf0;"  |
+|  <!-- 6f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  7_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 70 -->  style="background-color: #eaecf0;"  |
+|  <!-- 71 -->  style="background-color: #eaecf0;"  |
+|  <!-- 72 -->  style="background-color: #eaecf0;"  |
+|  <!-- 73 -->  style="background-color: #eaecf0;"  |
+|  <!-- 74 -->  style="background-color: #eaecf0;"  |
+|  <!-- 75 -->  style="background-color: #eaecf0;"  |
+|  <!-- 76 -->  style="background-color: #eaecf0;"  |
+|  <!-- 77 -->  style="background-color: #eaecf0;"  |
+|  <!-- 78 -->  style="background-color: #eaecf0;"  |
+|  <!-- 79 -->  style="background-color: #eaecf0;"  |
+|  <!-- 7a -->  style="background-color: #eaecf0;"  |
+|  <!-- 7b -->  style="background-color: #eaecf0;"  |
+|  <!-- 7c -->  style="background-color: #eaecf0;"  |
+|  <!-- 7d -->  style="background-color: #eaecf0;"  |
+|  <!-- 7e -->  style="background-color: #eaecf0;"  |
+|  <!-- 7f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  8_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 80 -->  style="background-color: #eaecf0;"  |
+|  <!-- 81 -->  style="background-color: #eaecf0;"  |
+|  <!-- 82 -->  style="background-color: #eaecf0;"  |
+|  <!-- 83 -->  style="background-color: #eaecf0;"  |
+|  <!-- 84 -->  style="background-color: #eaecf0;"  |
+|  <!-- 85 -->  style="background-color: #eaecf0;"  |
+|  <!-- 86 -->  style="background-color: #eaecf0;"  |
+|  <!-- 87 -->  style="background-color: #eaecf0;"  |
+|  <!-- 88 -->  style="background-color: #eaecf0;"  |
+|  <!-- 89 -->  style="background-color: #eaecf0;"  |
+|  <!-- 8a -->  style="background-color: #eaecf0;"  |
+|  <!-- 8b -->  style="background-color: #eaecf0;"  |
+|  <!-- 8c -->  style="background-color: #eaecf0;"  |
+|  <!-- 8d -->  style="background-color: #eaecf0;"  |
+|  <!-- 8e -->  style="background-color: #eaecf0;"  |
+|  <!-- 8f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  9_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- 90 -->  style="background-color: #eaecf0;"  |
+|  <!-- 91 -->  style="background-color: #eaecf0;"  |
+|  <!-- 92 -->  style="background-color: #eaecf0;"  |
+|  <!-- 93 -->  style="background-color: #eaecf0;"  |
+|  <!-- 94 -->  style="background-color: #eaecf0;"  |
+|  <!-- 95 -->  style="background-color: #eaecf0;"  |
+|  <!-- 96 -->  style="background-color: #eaecf0;"  |
+|  <!-- 97 -->  style="background-color: #eaecf0;"  |
+|  <!-- 98 -->  style="background-color: #eaecf0;"  |
+|  <!-- 99 -->  style="background-color: #eaecf0;"  |
+|  <!-- 9a -->  style="background-color: #eaecf0;"  |
+|  <!-- 9b -->  style="background-color: #eaecf0;"  |
+|  <!-- 9c -->  style="background-color: #eaecf0;"  |
+|  <!-- 9d -->  style="background-color: #eaecf0;"  |
+|  <!-- 9e -->  style="background-color: #eaecf0;"  |
+|  <!-- 9f -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  a_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- a0 -->  style="background-color: #eaecf0;"  |
+|  <!-- a1 -->  style="background-color: #eaecf0;"  |
+|  <!-- a2 -->  style="background-color: #eaecf0;"  |
+|  <!-- a3 -->  style="background-color: #eaecf0;"  |
+|  <!-- a4 -->  style="background-color: #eaecf0;"  |
+|  <!-- a5 -->  style="background-color: #eaecf0;"  |
+|  <!-- a6 -->  style="background-color: #eaecf0;"  |
+|  <!-- a7 -->  style="background-color: #eaecf0;"  |
+|  <!-- a8 -->  style="background-color: #eaecf0;"  |
+|  <!-- a9 -->  style="background-color: #eaecf0;"  |
+|  <!-- aa -->  style="background-color: #eaecf0;"  |
+|  <!-- ab -->  style="background-color: #eaecf0;"  |
+|  <!-- ac -->  style="background-color: #eaecf0;"  |
+|  <!-- ad -->  style="background-color: #eaecf0;"  |
+|  <!-- ae -->  style="background-color: #eaecf0;"  |
+|  <!-- af -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  b_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- b0 -->  style="background-color: #eaecf0;"  |
+|  <!-- b1 -->  style="background-color: #eaecf0;"  |
+|  <!-- b2 -->  style="background-color: #eaecf0;"  |
+|  <!-- b3 -->  style="background-color: #eaecf0;"  |
+|  <!-- b4 -->  style="background-color: #eaecf0;"  |
+|  <!-- b5 -->  style="background-color: #eaecf0;"  |
+|  <!-- b6 -->  style="background-color: #eaecf0;"  |
+|  <!-- b7 -->  style="background-color: #eaecf0;"  |
+|  <!-- b8 -->  style="background-color: #eaecf0;"  |
+|  <!-- b9 -->  style="background-color: #eaecf0;"  |
+|  <!-- ba -->  style="background-color: #eaecf0;"  |
+|  <!-- bb -->  style="background-color: #eaecf0;"  |
+|  <!-- bc -->  style="background-color: #eaecf0;"  |
+|  <!-- bd -->  style="background-color: #eaecf0;"  |
+|  <!-- be -->  style="background-color: #eaecf0;"  |
+|  <!-- bf -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  c_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- c0 -->  style="background-color: #eaecf0;"  |
+|  <!-- c1 -->  style="background-color: #eaecf0;"  |
+|  <!-- c2 -->  style="background-color: #eaecf0;"  |
+|  <!-- c3 -->  style="background-color: #eaecf0;"  |
+|  <!-- c4 -->  style="background-color: #eaecf0;"  |
+|  <!-- c5 -->  style="background-color: #eaecf0;"  |
+|  <!-- c6 -->  style="background-color: #eaecf0;"  |
+|  <!-- c7 -->  style="background-color: #eaecf0;"  |
+|  <!-- c8 -->  style="background-color: #eaecf0;"  |
+|  <!-- c9 -->  style="background-color: #eaecf0;"  |
+|  <!-- ca -->  style="background-color: #eaecf0;"  |
+|  <!-- cb -->  style="background-color: #eaecf0;"  |
+|  <!-- cc -->  style="background-color: #eaecf0;"  |
+|  <!-- cd -->  style="background-color: #eaecf0;"  |
+|  <!-- ce -->  style="background-color: #eaecf0;"  |
+|  <!-- cf -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  d_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- d0 -->  style="background-color: #eaecf0;"  |
+|  <!-- d1 -->  style="background-color: #eaecf0;"  |
+|  <!-- d2 -->  style="background-color: #eaecf0;"  |
+|  <!-- d3 -->  style="background-color: #eaecf0;"  |
+|  <!-- d4 -->  style="background-color: #eaecf0;"  |
+|  <!-- d5 -->  style="background-color: #eaecf0;"  |
+|  <!-- d6 -->  style="background-color: #eaecf0;"  |
+|  <!-- d7 -->  style="background-color: #eaecf0;"  |
+|  <!-- d8 -->  style="background-color: #eaecf0;"  |
+|  <!-- d9 -->  style="background-color: #eaecf0;"  |
+|  <!-- da -->  style="background-color: #eaecf0;"  |
+|  <!-- db -->  style="background-color: #eaecf0;"  |
+|  <!-- dc -->  style="background-color: #eaecf0;"  |
+|  <!-- dd -->  style="background-color: #eaecf0;"  |
+|  <!-- de -->  style="background-color: #eaecf0;"  |
+|  <!-- df -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  e_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- e0 -->  style="background-color: #eaecf0;"  |
+|  <!-- e1 -->  style="background-color: #eaecf0;"  |
+|  <!-- e2 -->  style="background-color: #eaecf0;"  |
+|  <!-- e3 -->  style="background-color: #eaecf0;"  |
+|  <!-- e4 -->  style="background-color: #eaecf0;"  |
+|  <!-- e5 -->  style="background-color: #eaecf0;"  |
+|  <!-- e6 -->  style="background-color: #eaecf0;"  |
+|  <!-- e7 -->  style="background-color: #eaecf0;"  |
+|  <!-- e8 -->  style="background-color: #eaecf0;"  |
+|  <!-- e9 -->  style="background-color: #eaecf0;"  |
+|  <!-- ea -->  style="background-color: #eaecf0;"  |
+|  <!-- eb -->  style="background-color: #eaecf0;"  |
+|  <!-- ec -->  style="background-color: #eaecf0;"  |
+|  <!-- ed -->  style="background-color: #eaecf0;"  |
+|  <!-- ee -->  style="background-color: #eaecf0;"  |
+|  <!-- ef -->  style="background-color: #eaecf0;"  |
 |-
 ! scope="row" |  f_
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
-|  style="background-color: #eaecf0;"  |
+|  <!-- f0 -->  style="background-color: #eaecf0;"  |
+|  <!-- f1 -->  style="background-color: #eaecf0;"  |
+|  <!-- f2 -->  style="background-color: #eaecf0;"  |
+|  <!-- f3 -->  style="background-color: #eaecf0;"  |
+|  <!-- f4 -->  style="background-color: #eaecf0;"  |
+|  <!-- f5 -->  style="background-color: #eaecf0;"  |
+|  <!-- f6 -->  style="background-color: #eaecf0;"  |
+|  <!-- f7 -->  style="background-color: #eaecf0;"  |
+|  <!-- f8 -->  style="background-color: #eaecf0;"  |
+|  <!-- f9 -->  style="background-color: #eaecf0;"  |
+|  <!-- fa -->  style="background-color: #eaecf0;"  |
+|  <!-- fb -->  style="background-color: #eaecf0;"  |
+|  <!-- fc -->  style="background-color: #eaecf0;"  |
+|  <!-- fd -->  style="background-color: #eaecf0;"  |
+|  <!-- fe -->  style="background-color: #eaecf0;"  |
+|  <!-- ff -->  style="background-color: #eaecf0;"  |
 |}
